Update startheaderinfo endpoint documentation
